--- a/Smart-Vehicle-App/client/src/index.html
+++ b/Smart-Vehicle-App/client/src/index.html
@@ -12,7 +12,9 @@
     <base href="/" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+      <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
+</head>
 
 <body>
   <app-root></app-root>
